--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,7 @@
 .header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #ddd;
-  width: 20%;
 }
 
 .logo {
@@ -20,6 +18,11 @@
   height: 2px;
   background: #007bff;
   animation: grow 0.3s ease;
+}
+
+.logo-img {
+  margin: 1rem;
+  height: 3rem;
 }
 
 @keyframes grow {
