--- a/src/components/PhonePreview/PhonePreview.css
+++ b/src/components/PhonePreview/PhonePreview.css
@@ -57,6 +57,27 @@
   animation: spin 4s linear infinite;
 }
 
-.navIcons {
-  color: red;
+.event-title {
+  padding-top: 1rem;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  padding-right: 0;
+}
+.event-title h6 {
+  font-size: small;
+  margin-left: 0;
+}
+.event-title img {
+  height: 1.5rem;
+  margin-right: 0.5rem;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
