--- a/src/components/PhonePreview/PhonePreview.css
+++ b/src/components/PhonePreview/PhonePreview.css
@@ -49,7 +49,7 @@
   border-radius: 43px;
   overflow: hidden;
   position: relative;
-  background: url('../../../public/mapui.jpg') center/cover no-repeat;
+  background: url('../../../public/Denmapui.jpg') center/cover no-repeat;
   z-index: 1;
 }
 
